Exit text style

--- a/styles/gulp-helper.less
+++ b/styles/gulp-helper.less
@@ -21,5 +21,9 @@
     .text-highighted {
       color: @text-color;
     }
+    .text-exit {
+      color: @text-color-warning;
+      border-bottom: dashed 1px @background-color-warning;
+    }
   }
 }
